all_deploy/rolling/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-rolling
  namespace: apps
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: aumit373/module10:v1.0
  template:
    metadata:
      labels:
        app: aumit373/module10:v1.0
    spec:
      containers:
        - name: module10
          image: aumit373/module10:v1.0
          ports:
            - containerPort: 3000
