all_deploy/rolling/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: module10-rolling-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rolling.local    # 👈 change to your desired host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: module10-service
            port:
              number: 80
